syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.JoaoPem.computacaodistribuida.grpc";
option java_outer_classname = "UserAccountProto";

import "common.proto";

service UserAccountService {
  rpc ListAllUserAccounts (EmptyRequest) returns (UserAccountListResponse);
  rpc ListUserPlaylists (UserIdRequest) returns (PlaylistListResponse);
}

message UserIdRequest {
  int64 userId = 1;
}

message UserAccount {
  int64 id = 1;
  string name = 2;
}

message UserAccountListResponse {
  repeated UserAccount users = 1;
}
